@@ -6,11 +6,11 @@
 	<artifactId>travart.gui.web</artifactId>
 	<name>Web TraVarT</name>
 	<version>0.0.1</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 
 	<properties>
 		<java.version>11</java.version>
-		<vaadin.version>23.1.3</vaadin.version>
+		<vaadin.version>23.2.3</vaadin.version>
 	</properties>
 
 	<parent>
@@ -84,7 +84,7 @@
 		<dependency>
 			<groupId>com.vaadin</groupId>
 			<artifactId>vaadin-lumo-theme</artifactId>
-			</dependency>
+		</dependency>
 		<dependency>
 			<groupId>com.vaadin.componentfactory</groupId>
 			<artifactId>togglebutton</artifactId>
@@ -119,9 +119,9 @@
 			<version>0.0.1</version>
 		</dependency>
 		<dependency>
-			<groupId>de.neominik</groupId>
-			<artifactId>uvl</artifactId>
-			<version>0.1.0-SNAPSHOT</version>
+			<groupId>de.vill</groupId>
+			<artifactId>uvl-parser</artifactId>
+			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.poi</groupId>
@@ -277,6 +277,72 @@
 							<trimStackTrace>false</trimStackTrace>
 							<enableAssertions>true</enableAssertions>
 						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+
+		<profile>
+			<id>exe</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>com.akathist.maven.plugins.launch4j</groupId>
+						<artifactId>launch4j-maven-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>l4j-clui</id>
+								<phase>package</phase>
+								<goals>
+									<goal>launch4j</goal>
+								</goals>
+								<configuration>
+									<headerType>console</headerType>
+									<outfile>target/webtravart-${project.version}.exe</outfile>
+									<jar>target/travart.gui.web-${project.version}.jar</jar>
+									<errTitle>WebTravart</errTitle>
+									<classPath>
+										<mainClass>com.example.application.Application</mainClass>
+										<addDependencies>true</addDependencies>
+										<preCp>anything</preCp>
+									</classPath>
+									<jre>
+										<minVersion>1.11.0</minVersion>
+										<opts>
+											<opt>-Djava.endorsed.dirs=./endorsed</opt>
+										</opts>
+									</jre>
+									<versionInfo>
+										<fileVersion>1.1.1.1</fileVersion>
+										<txtFileVersion>txt file version?</txtFileVersion>
+										<fileDescription>a description</fileDescription>
+										<copyright>my copyright</copyright>
+										<productVersion>4.3.2.1</productVersion>
+										<txtProductVersion>txt product version</txtProductVersion>
+										<productName>Web TraVarT</productName>
+										<internalName>webtravart</internalName>
+										<originalFilename>original.exe</originalFilename>
+									</versionInfo>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<artifactId>maven-assembly-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>assembly</id>
+								<phase>package</phase>
+								<goals>
+									<goal>single</goal>
+								</goals>
+								<configuration>
+									<descriptors>
+										<descriptor>assembly.xml</descriptor>
+									</descriptors>
+								</configuration>
+							</execution>
+						</executions>
 					</plugin>
 				</plugins>
 			</build>
